# practice-wasm

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs
wasm-rust/src/: lib.rs
