[package]
name = "wasm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# crate-type: 指定了生成库的类型
# cdylib: 生成动态链接库（C-compatible dynamic library），
# 这用于编译一个供其他编程语言加载的动态库。此输出类型将在 Linux 上创建 *.so 文件，在 macOS 上创建 *.dylib 文件，在 Windows 上创建 *.dll 文件。
# 这种类型的库可以被其他编程语言调用，因为它们与 C 语言兼容。这对于与 WebAssembly（Wasm）互操作性很重要，因为 Wasm 通常需要与 C 语言接口进行交互。
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

# 为了保持构建速度非常快，web-sys 将每个 Web 接口都封装在一个 Cargo 特性后面。在 API 文档中找到我们要使用的类型或方法；它将列出必须启用的特性才能访问该 API。
# 例如，如果我们要查找 window.resizeTo 函数，我们会在 API 文档中搜索 resizeTo。
# 我们将找到 web_sys::Window::resize_to 函数，它需要启用 Window 特性。要访问该函数，我们在 Cargo.toml 中启用 Window 特性
[dependencies.web-sys]
version = "0.3" 
features = [ "Window" ]
